# Makma2

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Makma2.cpp
src/lib/: CMakeLists.txt
